--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,13 +14,15 @@
                 window.xNetShell.startLoc = window.location;
                 window.xNetShell.debug = true;
                 window.xNetShell.xdebug = false;
+                window.xNetShell.cities = [];
             })();
         </script>
 
         <!-- JS -->
         <!-- load angular, ngRoute, ngAnimate -->
         <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-        <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="http://d3js.org/topojson.v1.min.js"></script>
         <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>
